force-app/main/default/objects/Overheads_and_Profit_Default_Values__c/Overheads_and_Profit_Default_Values__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Overheads and Profit Default Values</description>
    <label>Overheads and Profit Default Values</label>
</CustomObject>