force-app/main/default/objects/Overheads_and_Profit_Default_Values__c/fields/I_RS_Non_Salary_Overhead__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Non_Salary_Overhead__c</fullName>
    <label>Non-Salary Overhead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>