force-app/main/default/objects/Overheads_and_Profit_Default_Values__c/fields/I_RS_Overhead__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Overhead__c</fullName>
    <label>Overhead %</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>