force-app/main/default/objects/Overheads_and_Profit_Default_Values__c/fields/I_RS_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Rate_Type__c</fullName>
    <label>Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>